<resources>
    <string name="hint_username">Masukkan nama pengguna Anda</string>
    <string name="hint_email" translatable="false">contoh : user@gmail.com</string>
    <string name="hint_password">Masukkan kata sandi Anda</string>
    <string name="error_username">Tidak boleh kurang dari 2 karakter</string>
    <string name="error_email">Email harus benar</string>
    <string name="error_password">Kata sandi harus 8 karakter</string>
    <string name="error_register">Gagal mendaftarkan akun</string>
    <string name="check">Periksa email atau kata sandi Anda</string>
    <string name="we_all_have_a_story">Kita semua punya cerita</string>
    <string name="sign_in">Masuk</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="register_your_account">Daftarkan akun Anda</string>
    <string name="photo">Foto</string>
    <string name="image_add_photo">gambar tambah foto</string>
    <string name="camera">Kamera</string>
    <string name="hint_description">Apa yang ingin Anda ceritakan...</string>
    <string name="upload">Unggah</string>
    <string name="gallery">Galeri</string>
    <string name="already_account">Sudah punya akun?</string>
    <string name="data_not_found">Oops, data tidak ditemukan...</string>
    <string name="check_connection">Oops, periksa koneksi Anda...</string>
    <string name="try_again">Coba lagi</string>
    <string name="log_out">Keluar</string>
    <string name="are_you_sure">Apakah Anda yakin?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="not_out">Jangan keluar</string>
    <string name="log_out_warning">Anda keluar dari aplikasi</string>
    <string name="upload_story">Unggah cerita</string>
    <string name="add_story">Tambahkan Cerita</string>
    <string name="warning_upload">Harap lengkapi file dengan deskripsi</string>
    <string name="success_add_story">Berhasil menambahkan cerita</string>
    <string name="error_add_story">Gagal menambahkan cerita, silakan coba lagi</string>
    <string name="success_register">Berhasil mendaftarkan akun</string>
    <string name="warning_input">Data tidak lengkap</string>
    <string name="settings">Pengaturan</string>
    <string name="details">Detail</string>
    <string name="image_login">Gambar login</string>
    <string name="image_register">Gambar daftar</string>
    <string name="start_now">Mulai Sekarang</string>
    <string name="description_menu2">Saat hari Anda berat, Tetaplah Semangat</string>
    <string name="let_start">Ayo mulai</string>
    <string name="description_menu3">semoga harimu menyenangkan</string>
    <string name="title_menu2">Mudah dan Menyenangkan</string>
    <string name="image_welcome">gambar_sambutan</string>
    <string name="title_menu1">Aplikasi Yang Menyenangkan</string>
    <string name="mystoryapp" translatable="false">NafStory</string>
    <string name="description_splash">"Selamat Datang di Aplikasi yang Menyenangkan "</string>
    <string name="app_name" translatable="false">NafStory</string>
    <string name="description_menu1">Mau cerita sesuatu yang berat?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
</resources>
